--- a/adaptis-master/src/assets/styles/base/_fonts.scss
+++ b/adaptis-master/src/assets/styles/base/_fonts.scss
@@ -103,6 +103,13 @@
     font-weight: bold;
     font-style: normal;
 }
+@font-face {
+    font-family: 'CapitoliumW01-2Regular';
+    src: url('./fonts/Capitolium/CapitoliumW01-2Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 
 
 
