--- a/adaptis-master/src/views/components/footer/footer.pug
+++ b/adaptis-master/src/views/components/footer/footer.pug
@@ -5,17 +5,17 @@ footer
                     a(href="index.html") ADAPTIS
             nav.footer-menu
                 ul
-                    li
+                    li.item#the_work_1
                         a(href="the_work") THE WORK
-                    li
+                    li.item#the_agency_1
                         a(href="the_agency") THE AGENCY
-                    li
+                    li.item
                         a(href="#") CAREERS
-                    li
+                    li.item#contact_1
                         a(href="contact") CONTACT US
             div.row 
                 div.col-xs-6.col-sm-3
-                    div.footer-iems
+                    div.footer-items
                         div.clock
                             img(src="../../../assets/images/clock.png", alt="clock")
                         p.location AUSTRALIA
@@ -24,7 +24,7 @@ footer
                         p.email
                             a(href="mailto:australia@adaptis.io") AUSTRALIA@ADAPTIS.IO
                 div.col-xs-6.col-sm-3
-                    div.footer-iems
+                    div.footer-items
                         div.clock
                             img(src="../../../assets/images/clock.png", alt="clock")
                         p.location SWITZERLAND
@@ -33,7 +33,7 @@ footer
                         p.email
                             a(href="mailto:switzerland@adaptis.io") SWITZERLAND@ADAPTIS.IO
                 div.col-xs-6.col-sm-3
-                    div.footer-iems
+                    div.footer-items
                         div.clock
                             img(src="../../../assets/images/clock.png", alt="clock")
                         p.location THAILAND
@@ -42,7 +42,7 @@ footer
                         p.email
                             a(href="mailto:thailand@adaptis.io") THAILAND@ADAPTIS.IO
                 div.col-xs-6.col-sm-3
-                    div.footer-iems
+                    div.footer-items
                         div.clock
                             img(src="../../../assets/images/clock.png", alt="clock")
                         p.location VIETNAM
