--- a/adaptis-master/src/views/pages/homepage.pug
+++ b/adaptis-master/src/views/pages/homepage.pug
@@ -10,5 +10,11 @@ block basicSeo
 
 block content
   //- Desktop page
+  include ../components/introduction_1/introduction_1.pug
+  include ../components/introduction_3/introduction_3.pug
+  include ../components/introduction_2/introduction_2.pug
   include ../components/highlight_block/highlight_block.pug
+  include ../components/solution/solution.pug
+  include ../components/clients/clients.pug
+  
   
