--- a/adaptis-master/src/assets/styles/_app.scss
+++ b/adaptis-master/src/assets/styles/_app.scss
@@ -14,4 +14,9 @@
 // Component
 @import '../../views/components/header/header';
 @import '../../views/components/footer/footer';
+@import '../../views/components/introduction_1/introduction_1';
+@import '../../views/components/introduction_2/introduction_2';
+@import '../../views/components/introduction_3/introduction_3';
 @import '../../views/components/highlight_block/highlight_block';
+@import '../../views/components/clients/clients';
+@import '../../views/components/solution/solution';
