--- a/adaptis-master/src/assets/styles/base/_variables.scss
+++ b/adaptis-master/src/assets/styles/base/_variables.scss
@@ -7,6 +7,7 @@ $grid-breakpoints: (
     smplus: 769px,
     md: 992px,
     lg: 1025px,
+    xlminus: 1199px,
     xl: 1200px
 ); 
 
@@ -58,6 +59,15 @@ $colors: (
     c-pink-light: #EBCCD1,
     c-red: #A94442,
     c-gray-2: #fcfcfc,
+    c-gray-3: #f5f5f5,
+    c-gray-4: #d5d5d5,
+    c-6e: #6e6e6e,
+    c-39: #393939,
+    c-violet: #3c213a,
+    c-violet-2: rgba(60,33,58,.85),
+    c-violet-3: rgba(60,33,58,.7),
+    c-violet-4: #3C213A,
+    c-violet-5: #9F579E,
 );
 // // main-colors:
 $bg-color-primary: color(c-gray-2);
@@ -67,12 +77,22 @@ $bg-color-black: color(c-black);
 $bg-color-white-blur: color(c-white-blur);
 $border-color-gray: color(c-gray);
 $border-color-blue: color(c-blue);
+$bg-color-gray-3: color(c-gray-3);
+$bg-color-gray-4: color(c-gray-4);
+$bg-color-violet: color(c-violet);
+$bg-color-violet-2: color(c-violet-2);
+$bg-color-violet-3: color(c-violet-3);
+
 
 $text-color-primary: color(c-dark-blue);
 $text-color-secondary: color(c-white);
 $text-color-black: color(c-black);
 $text-color-blue: color(c-blue);
 $text-color-gray-blur: color(c-gray-blur);
+$text-color-6e: color(c-6e);
+$text-color-39: color(c-39);
+$text-color-violet-4: color(c-violet-4);
+$text-color-violet-5: color(c-violet-5);
 
 $page-border-radius: .3rem;
 $btn-bg-color-primary: color(c-yellow);
