--- a/adaptis-master/src/views/components/header/header.pug
+++ b/adaptis-master/src/views/components/header/header.pug
@@ -5,15 +5,15 @@ header
         div.main-menu
             nav
                 ul
-                    li.menu-item
+                    li.menu-item.current
                         a(href="index.html")  ADAPTIS
-                    li.menu-item
+                    li.menu-item#the_work
                         a(href="the_work")  THE WORK
-                    li.menu-item
+                    li.menu-item#the_agency
                         a(href="the_agency") THE AGENCY
                     li.menu-item
                         a(href="careers") CAREERS
-                    li.menu-item
+                    li.menu-item#contact
                         a(href="contact") CONTACT US
             button.hamburger 
                 div.hamburger-box
