edit header all pages

--- a/Nhom4_Kempinki/src/assets/styles/base/_variables.scss
+++ b/Nhom4_Kempinki/src/assets/styles/base/_variables.scss
@@ -65,6 +65,7 @@ $colors: (
     c-gray: #e5ebee,
     c-gray-1: #ddd,
     c-pink-light: #EBCCD1,
+    c-brown: #b5a191,
     c-red: #A94442,
     bg-color: #010f2a,
     text-color: #b5a191,
