--- a/Nhom4_Kempinki/src/views/components/header/header.pug
+++ b/Nhom4_Kempinki/src/views/components/header/header.pug
@@ -4,7 +4,7 @@ header
             .row.mx-0
                 .top-logo.col-md-3.middle-md
                     .logo
-                        a(href="#", title="logo")
+                        a(href="/", title="logo")
                             img(src= ("../../../assets/images/logo.png"), alt="Kempinski Logo")
                 .top-slogan.col-md-6.middle-md.center-xs
                     .text-big
@@ -26,42 +26,42 @@ header
                                     span.icon-user
                                     span.text-login Login
     .banner-header
-        .banner-wrapper
-            .banner-wrapper-content
-                .banner-images-block-left
-                    img(src="../../../assets/images/header/banner-header.jpg", alt="Banner Header")
-                .banner-images-block-right
-                    .banner-images-block
-                        .content-block
-                            .images-cover
-                                img(src="../../../assets/images/header/destinations-map.jpg", alt="Desnitaion")
-                            .content.overlay
-                                span.text OUR DESTINATIONS 
-                    .banner-images-block
-                        .content-block
-                            .images-cover
-                                img(src="../../../assets/images/header/experience.jpg", alt="experience")
-                            .content.overlay
-                                span.text Experience
-                    .search-form
-                        span HOW MAY WE ASSIST YOU ?
-                    .banner-images-block
-                        .content-block
-                            .images-cover
-                                img(src="../../../assets/images/header/special-offers.jpg", alt="Offers")
-                            .content.overlay
-                                span.text Offers
-                    .banner-images-block
-                        .content-block
-                            .images-cover
-                                img(src="../../../assets/images/header/our-hotel.png", alt="Our Hotel")
-                            .content.overlay
-                                span.text Our Hotel               
+        block banner-wrapper-inside-page
+            .banner-wrapper
+                .banner-wrapper-content
+                    .banner-images-block-left
+                        img(src="../../../assets/images/header/banner-header.jpg", alt="Banner Header")
+                    .banner-images-block-right
+                        .banner-images-block
+                            .content-block
+                                .images-cover
+                                    img(src="../../../assets/images/header/destinations-map.jpg", alt="Desnitaion")
+                                .content.overlay
+                                    span.text(data-target="destination-map") OUR DESTINATIONS 
+                        .banner-images-block
+                            .content-block
+                                .images-cover
+                                    img(src="../../../assets/images/header/experience.jpg", alt="experience")
+                                .content.overlay
+                                    span.text(data-target="experience") Experience
+                        .search-form
+                            span HOW MAY WE ASSIST YOU ?
+                        .banner-images-block
+                            .content-block
+                                .images-cover
+                                    img(src="../../../assets/images/header/special-offers.jpg", alt="Offers")
+                                .content.overlay
+                                    span.text(data-target="offers") Offers
+                        .banner-images-block
+                            .content-block
+                                .images-cover
+                                    img(src="../../../assets/images/header/our-hotel.png", alt="Our Hotel")
+                                .content.overlay
+                                    span.text(data-target="our-hotel") Our Hotel               
         .menu-left
             .menu-left-content.delay
                 span.menu-title Overview
-                //- - var pages = {desnitaions: '/destinations', experiences: '/experiences-by-kempinski', special: '/special-offers', loyalty: '/loyalty-programme', meetingsEvent: '/meetings-and-events', blog: '/blog', about: '/about-us', guestGallery: '/guest-gallery', }
-                - var menus = [{text: 'desnitaions', link: '/desnitaions'}, {text: 'special offers', link: '/special-offers', submenu: [{text: 'sub-2-1', link: '###'}, {text: 'sub-2-2', link: '###'}] }, {text: 'guestGallery', link: '/guest-gallery'  }, {text: 'about', link: '/about-us'}];
+                - var menus = [{text: 'special offers', link: '/special-offers', submenu: [{text: 'sub-2-1', link: '###'}, {text: 'sub-2-2', link: '###'}] }, {text: '#Kempinski Gallery', link: '/guest-gallery'  }, {text: 'about us', link: '/about-us'}];
                 ul.side-menu
                     each list in menus
                         li.side-list-lv-1
@@ -76,15 +76,63 @@ header
             span
             span
             span
-    .booking-block
-        .container-fluid
-            form#aa(action="#", method="get")
-                .form-inline-search
-                    .block-location
-                        .form-group.form-search-location
-                            select#a(name='cad')
-                        .error-msg
-                            span WHERE WOULD YOU LIKE TO GO?
-                    .block-picker
-                    .block-number
-                    button(type="submit")
+    block booking-block
+        .booking-block
+            .container-fluid
+                form#aa(action="#", method="get")
+                    .form-inline-search
+                        .block-location
+                            .form-group.form-search-location
+                                select.form-search-hotel(name="form-search-hotel")
+                            .error-msg
+                                span WHERE WOULD YOU LIKE TO GO?
+                        .block-picker
+                            .form-group
+                                input(type="text", name="check-in", id="check-in", readonly)
+                                span.icon-calendar
+                            .form-group
+                                input(type="text", name="check-out", id="check-out", readonly)
+                                span.icon-calendar
+                            .error-msg
+                                span PLEASE SELECT YOUR CHECK-IN AND CHECK-OUT DATES
+                        .block-number
+                            mixin select(...values)
+                                    each value in values
+                                        option(value=value)= value
+                            .form-group.guest-select
+                                select.numberOfRoom(nam="NumberOfRoom")
+                                    //- +select('1 Room', '2 Rooms', '3 Rooms', '4 Rooms')
+                                button.search(type="submit") Search
+                            .collapse-advanced
+                                .row-select
+                                    .num-adult
+                                        select.numberOfAdult(nam="NumberOAdult")
+                                            //- +select('1 Adult Per Room', '2 Adults Per Room', '3 Adults Per Room', '4 Adults Per Room')
+                                    .num-child
+                                        select.numberOfChild(nam="NumberOfChild")
+                                            //- +select('1 Children Per Room', '2 Childrens Per Room', '3 Childrens Per Room', '4 Childrens Per Room')
+                                .row-select-children
+                                    span.title Age of Children
+                                    .block-list-children
+                                        .form-group.children-select
+                                            select.ageChildren(name="ChildrenAge[4]")
+                                                //- +select(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12)
+                                        .form-group.children-select
+                                            select.ageChildren(name="ChildrenAge[3]")
+                                                //- +select(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12)
+                                        .form-group.children-select
+                                            select.ageChildren(name="ChildrenAge[2]")
+                                            //-    +select(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12)
+                                        .form-group.children-select
+                                            select.ageChildren(name="ChildrenAge[1]")
+                                            //-    +select(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12)
+                    .block-option
+                        .row
+                            .type-code-block
+                                select#CodeType(name="CodeType")
+                            .block.code-block
+                                input(type="text", placeholder="Code", name="CodeValue", id="CodeValue")
+                            .block.promo-block
+                                input(type="text", placeholder="Promotion Code", name="PromotionCode", id="PromotionCode")
+                            a(href="#" data-target="#partner-destination-modal" data-toggle="modal" class="partner-info-modal-trigger") Partner Destinations
+
