--- a/Nhom4_Kempinki/src/views/pages/guest-gallery.pug
+++ b/Nhom4_Kempinki/src/views/pages/guest-gallery.pug
@@ -8,5 +8,11 @@ block basicSeo
   meta(name='keywords', content='Gallery, page')
   meta(name='author' content='')
 
+
+block banner-wrapper-inside-page
+  .banner-wrapper-inside-page
+    .banner-wrapper-content
+      img(src="../../assets/images/header/banner-header-page-galley.jpg", alt="Banner Header")
+  
 block content
-    include ../components/homepage/gallery/gallery.pug
+  
