--- a/Nhom4_Kempinki/src/assets/styles/_app.scss
+++ b/Nhom4_Kempinki/src/assets/styles/_app.scss
@@ -8,8 +8,9 @@
 @import './base/_fonts';
 @import '../../../node_modules/slick-carousel/slick/slick.css';
 @import '../../../node_modules/slick-carousel/slick/slick-theme.scss';
-@import '../../../node_modules/choices.js/public/assets/styles/choices.min.css';
+@import '../../../node_modules/select2/dist/css/select2.min.css';
 @import '../../../node_modules/mapbox-gl/dist/mapbox-gl.css';
+@import '../../../node_modules/pikaday/css/pikaday.css';
 @import './base/animate.css';
 @import './base/jquery.fancybox.min.css';
 @import './base/_global';
