--- a/Nhom4_Kempinki/src/views/pages/special-offers.pug
+++ b/Nhom4_Kempinki/src/views/pages/special-offers.pug
@@ -4,9 +4,12 @@ block title
   title Guest-Gallery - home
 
 block basicSeo
-  meta(name='description' content='Gallery page')
-  meta(name='keywords', content='Gallery, page')
+  meta(name='description' content='Special page')
+  meta(name='keywords', content='Special, page')
   meta(name='author' content='')
-
+block banner-wrapper-inside-page
+  .banner-wrapper-inside-page
+    .banner-wrapper-content
+      img(src="../../assets/images/header/banner-header-special-offers.jpg", alt="Banner Header")
 block content
     
