update hp slider

--- a/adaptis-master/src/views/components/introduction_1/introduction_1.pug
+++ b/adaptis-master/src/views/components/introduction_1/introduction_1.pug
@@ -1,4 +1,4 @@
-section.introduction_1
+section.introduction_1.wow.slideInRight(data-wow-duration="2s" data-wow-delay=".5s")
     .container
         .content
             .title
