--- a/adaptis-master/src/views/components/introduction_3/introduction_3.pug
+++ b/adaptis-master/src/views/components/introduction_3/introduction_3.pug
@@ -1,5 +1,5 @@
-section.introduction_3
-    .container 
+section.introduction_3.wow.slideInRight(data-wow-duration="2s" data-wow-delay="1s")
+    .container-special
         .content
             .background-image
                 img(src="../../../assets/images/adaptis-jw-bgd.jpg", alt="image")
