--- a/adaptis-master/src/views/components/introduction_3/introduction_3.scss
+++ b/adaptis-master/src/views/components/introduction_3/introduction_3.scss
@@ -1,6 +1,6 @@
 .introduction_3 {
-    padding: 107px 0 150px;
-    .container {
+    padding: 107px 0 150px 5px;
+    .container-special {
         max-width: 960px;
         position: relative;
     }
@@ -19,7 +19,7 @@
         background: color(c-39);
         position: relative;
         padding: 30px;
-        width: 67%;
+        width: 65.2%;
         p {
             color: color(c-white);
         }
