--- a/adaptis-master/src/assets/styles/_app.scss
+++ b/adaptis-master/src/assets/styles/_app.scss
@@ -10,6 +10,9 @@
 @import './base/_flexboxgrid';
 @import './base/_lazyload';
 @import './base/_animate';
+@import '../../../node_modules/slick-carousel/slick/slick-theme.scss';
+@import '../../../node_modules/slick-carousel/slick/slick.css';
+
 
 // Component
 @import '../../views/components/header/header';
@@ -20,3 +23,5 @@
 @import '../../views/components/highlight_block/highlight_block';
 @import '../../views/components/clients/clients';
 @import '../../views/components/solution/solution';
+@import '../../views/components/relative_block/relative_block';
+@import '../../views/components/slider/slider';
