--- a/adaptis-master/src/assets/styles/base/_variables.scss
+++ b/adaptis-master/src/assets/styles/base/_variables.scss
@@ -68,6 +68,8 @@ $colors: (
     c-violet-3: rgba(60,33,58,.7),
     c-violet-4: #3C213A,
     c-violet-5: #9F579E,
+    c-black-opacity: rgba(0,0,0,.5),
+    c-black-opacity-1: rgba(0,0,0,.75),
 );
 // // main-colors:
 $bg-color-primary: color(c-gray-2);
