--- a/adaptis-master/src/views/components/introduction_2/introduction_2.pug
+++ b/adaptis-master/src/views/components/introduction_2/introduction_2.pug
@@ -1,14 +1,14 @@
 section.introduction_2
     .container
         .content
-            .content-left 
+            .content-left.wow.fadeOutLeft(data-wow-duration="2s" data-wow-delay="2s")
                 .title
                     p.title-first We are
                     p.title-second problem solvers
                 .content-detail
                     p Adaptis crafts engaging end-to-end digital solutions that aim to solve real problems. We are a collective of problem solvers and creative thinkers. Engineers and analysts. 
                     p Some clients call us a digital agency, others see us as a development partner. We just see it as investing in our people to work alongside the most demanding of clients. Welcome to Adaptis, a global technical agency with locations in Australia, Switzerland, South East Asia, and Vietnam.
-            .content-right
+            .content-right.wow.fadeOutRight(data-wow-duration="2s" data-wow-delay="2s")
                 .image
                     img(src="../../../assets/images/bgd-solvers.png", alt="image")
                     a.btn-adaptis-black(href="#") LET'S TALK
