--- a/adaptis-master/src/views/layouts/master.pug
+++ b/adaptis-master/src/views/layouts/master.pug
@@ -37,6 +37,7 @@ html(lang='jp')
     //- Favicons
     link(rel='shortcut icon', href=require('images/favicons/favicon.png'))
 
+    
     //- Fonts
     //- link(href="https://fonts.googleapis.com/css?family=Quicksand", rel='stylesheet')
 
@@ -57,7 +58,7 @@ html(lang='jp')
 
     //- block scripts
     block scripts
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
     script(id="ze-snippet", src="https://static.zdassets.com/ekr/snippet.js?key=a0d065e1-295a-4de9-89f4-106bb253506a" defer)
     script(src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDo8ICXyf-BwI1tBv-PJxvHgm-0wUbTLAY&libraries=places" defer)
     script(src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js" defer)
