--- a/renovation/src/views/components/portfolio/portfolio.pug
+++ b/renovation/src/views/components/portfolio/portfolio.pug
@@ -1,5 +1,5 @@
 section.portfolio_area
-  .container
+  .container-fluid
     .portfolio_filter
       ul.list_style
         li.active(data-filter='*')
