--- a/renovation/src/views/components/portfolio/portfolio.scss
+++ b/renovation/src/views/components/portfolio/portfolio.scss
@@ -2,9 +2,12 @@
     width: 100%;
 }
 
-.container {
-    padding: 0 10%;
-    width: 100%;
+.container-fluid {
+    .row {
+        [class^="col-"] {
+            padding: 0 8px;
+        }
+    }
 }
 
 .portfolio_filter {
@@ -79,8 +82,8 @@
     .lightbox {
         position: absolute;
         z-index: 10;
-        top: 3px;
-        bottom: 3px;
+        top: 0;
+        bottom: 0;
         left: 0;
         right: 0;
         opacity: 0;
@@ -110,13 +113,14 @@
                 position: absolute;
                 left: 0px;
                 top: 0px;
+                bottom: 0;
                 // max-width: 100%;
                 height: 100%;
                 z-index: 1;
                 opacity: 0;
-                -webkit-transition: all 400ms linear 0s;
-                -o-transition: all 400ms linear 0s;
-                transition: all 400ms linear 0s;
+                // -webkit-transition: all 400ms linear 0s;
+                // -o-transition: all 400ms linear 0s;
+                // transition: all 400ms linear 0s;
             }
         }
         img {
@@ -139,12 +143,12 @@
     .portfolio_text {
         position: absolute;
         z-index: 3;
-        top: 3px;
-        bottom: 3px;
+        top: 10px;
+        bottom: 10px;
         left: 0;
         right: 0;
         opacity: 0;
-        transition: .5s ease;
+        transition: 0.5s ease;
         background-color: rgba(0, 0, 0, 0.65);
         h4 {
             font-size: 18px;
@@ -159,13 +163,17 @@
             color: white;
             font-size: 20px;
             position: absolute;
-            top: 70%;
+            top: 60%;
             left: 30%;
             -webkit-transform: translate(-50%, -50%);
             -ms-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
             &:hover {
                 color: #fcb827;
+            }
+            @include min-xs {
+                top: 70%;
+                left: 29%;
             }
         }
         .view {
@@ -180,30 +188,18 @@
             color: white;
             font-size: 20px;
             position: absolute;
-            top: 80%;
+            top: 70%;
             left: 27%;
             -webkit-transform: translate(-50%, -50%);
             -ms-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
+            @include min-xs {
+                top: 78%;
+            }
             &::after {
-                font-family: 'Fontawesome';
+                font-family: "Fontawesome";
                 content: " \f101";
                 font-size: 15px;
-            }
-        }
-    }
-    &:hover {
-        .portfolio_img {
-            a {
-                &:before {
-                    opacity: 1;
-                }
-            }
-            img {
-                -webkit-transform: scale(1.05);
-                -ms-transform: scale(1.05);
-                transform: scale(1.05);
-                max-width: 100%;
             }
         }
     }
