update the word page

--- a/adaptis-master/src/assets/styles/_app-JP.scss
+++ b/adaptis-master/src/assets/styles/_app-JP.scss
@@ -24,3 +24,4 @@
 @import '../../views/components/solution/solution';
 @import '../../views/components/relative_block/relative_block';
 @import '../../views/components/slider/slider';
+@import '../../views/components/the_work_my/the_work_my';
