--- a/adaptis-master/src/views/pages/the_work.pug
+++ b/adaptis-master/src/views/pages/the_work.pug
@@ -5,4 +5,5 @@ block title
 
 block content
     .theWorkPage
-    h1 the work
+    include ../components/the_work_my/the_work_my.pug
+//- script(src="../../assets/scripts/jquery.hoverdir.js")
