--- a/renovation/src/views/pages/homepage.pug
+++ b/renovation/src/views/pages/homepage.pug
@@ -9,9 +9,10 @@ block basicSeo
   meta(name='author' content='')
 
 block content
-
+  include ../components/home/home.pug
 
   //- Desktop page
   section.page.home__page
     h2 
       a(href="http://kenh14.vn") indexPage
+
