--- a/renovation/src/views/index.pug
+++ b/renovation/src/views/index.pug
@@ -1,16 +1,20 @@
 extends ./layouts/master.pug
 
+
 block title
-  title My Page - Index
+  title Renovation-Home
 
 block content
+  .homePage
+  include components/home/home.pug
   - var pages = { homePage: '/homePage', testPage: '/test', testimonail2: '/testimonails'}
 
-  //- Desktop page
+  Desktop page
   section.page.home__page
     h1.page__title # Index page3
-
+    p hello
     ul(style="list-style: disc; padding-left: 4rem; margin: 4rem 0")
       each val, index in pages
         li
           a(href=val)= index
+  
