--- a/adaptis-master/src/views/components/the_work_my/the_work_my.pug
+++ b/adaptis-master/src/views/components/the_work_my/the_work_my.pug
@@ -3,7 +3,7 @@ section.the_work_section
         .content
             .row
                 //ROW 1
-                .col-sm-4.col-xs-6
+                .col-md-4.col-sm-6.col-xs-6
                     .content-details
                         a(href="#")
                             .image
@@ -14,7 +14,7 @@ section.the_work_section
                                     span KEMPINSKI
                                     span HOTELS
                                 .text A global luxury hotel group located in Geneva
-                .col-sm-4.col-xs-6
+                .col-md-4.col-sm-6.col-xs-6
                     .content-details
                         a(href="#")
                             .image
@@ -25,7 +25,7 @@ section.the_work_section
                                     span ADIB
                                     span BANK
                                 .text An Islamic bank based in Abu Dhabi
-                .col-sm-4.col-xs-6
+                .col-md-4.col-sm-6.col-xs-6
                     .content-details
                         a(href="#")
                             .image
@@ -37,7 +37,7 @@ section.the_work_section
                                     span QUARTZ
                                 .text Engineered quartz stone, manufactured and based in Vietnam
                 // ROW 2
-                .col-sm-4.col-xs-6
+                .col-md-4.col-sm-6.col-xs-6
                     .content-details
                         a(href="#")
                             .image
@@ -48,7 +48,7 @@ section.the_work_section
                                     span BUBERRY
                                     span CAREERS
                                 .text Careers reinvented at this luxury fashion brand
-                .col-sm-4.col-xs-6
+                .col-md-4.col-sm-6.col-xs-6
                     .content-details
                         a(href="#")
                             .image
@@ -59,7 +59,7 @@ section.the_work_section
                                     span HSH
                                     span GROUP
                                 .text The owner and operator of the The Peninsula brand as well as other strategic assets
-                .col-sm-4.col-xs-6
+                .col-md-4.col-sm-6.col-xs-6
                     .content-details
                         a(href="#")
                             .image
