--- a/adaptis-master/src/views/index.pug
+++ b/adaptis-master/src/views/index.pug
@@ -4,7 +4,7 @@ block title
   title Adaptis
 
 block content
-  - var pages = { Homepage: '/homepage', TheWork: '/the_work' , TheAgency: 'the_agency', Contact: 'contact' }
+  - var pages = { Homepage: '/homepage', TheWork: '/the_work' , TheAgency: '/the_agency', Contact: '/contact' }
 
   //- Desktop page
   section.page.home__page
