--- a/adaptis-master/src/views/pages/the_work.pug
+++ b/adaptis-master/src/views/pages/the_work.pug
@@ -5,4 +5,4 @@ block title
 
 block content
     .theWorkPage
-    include ../components/the_work_my/the_work_my.pug
+    //- include ../components/the_work_my/the_work_my.pug
