init branch hangdt

--- a/adaptis-master/src/assets/styles/base/_mixins.scss
+++ b/adaptis-master/src/assets/styles/base/_mixins.scss
@@ -207,3 +207,11 @@
         @content;
     }
 }
+
+@mixin transition($value) {
+	transition: $value;
+	-moz-transition: $value;
+	-webkit-transition: $value;
+	-o-transition: $value;
+	-ms-transition: $value;
+}
