--- a/adaptis-master/src/assets/styles/_app.scss
+++ b/adaptis-master/src/assets/styles/_app.scss
@@ -12,4 +12,7 @@
 
 // Component
 @import '../../views/components/header/header';
-@import '../../views/components/footer/footer';
+// @import '../../views/components/footer/footer';
+
+@import '../../views/components/relative/relative.scss';
+@import '../../views/components/thework/thework.scss';
