--- a/adaptis-master/src/assets/styles/base/_fonts.scss
+++ b/adaptis-master/src/assets/styles/base/_fonts.scss
@@ -33,3 +33,80 @@
     font-weight: 700;
     font-style: normal;
 }
+
+
+@font-face {
+    font-family: 'Runda';
+    src: url('./fonts/Runda/Runda-Black.ttf') format('truetype');
+    font-weight: 900;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Runda';
+    src: url('./fonts/Runda/Runda-MediumItalic.ttf') format('truetype');
+    font-weight: 500;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Runda';
+    src: url('./fonts/Runda/Runda-BoldItalic.ttf') format('truetype');
+    font-weight: bold;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Runda';
+    src: url('./fonts/Runda/Runda.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Runda';
+    src: url('./fonts/Runda/Runda-Medium.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Runda';
+    src: url('./fonts/Runda/Runda-Italic.ttf') format('truetype');
+    font-weight: normal;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Runda';
+    src: url('./fonts/Runda/Runda-BlackItalic.ttf') format('truetype');
+    font-weight: 900;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Runda';
+    src: url('./fonts/Runda/Runda-LightItalic.ttf') format('truetype');
+    font-weight: 300;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Runda';
+    src: url('./fonts/Runda/Runda-Light.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Runda';
+    src: url('./fonts/Runda/Runda-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'CapitoliumW01-2Regular';
+    src: url('./fonts/Capitolium/CapitoliumW01-2Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
