--- a/adaptis-master/src/assets/styles/base/font-language/jp-JP.scss
+++ b/adaptis-master/src/assets/styles/base/font-language/jp-JP.scss
@@ -84,3 +84,79 @@
     font-weight: 700;
     font-style: italic;
 }
+
+
+
+
+/*
+@font-face {
+    font-family: 'Runda';
+    src: url('./fonts/Runda-Black.ttf') format('truetype');
+    font-weight: 900;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Runda';
+    src: url('./fonts/Runda-MediumItalic.ttf') format('truetype');
+    font-weight: 500;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Runda';
+    src: url('./fonts/Runda-BoldItalic.ttf') format('truetype');
+    font-weight: bold;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Runda';
+    src: url('./fonts/Runda.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Runda';
+    src: url('./fonts/Runda-Medium.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Runda';
+    src: url('./fonts//fonts/Runda-Italic.ttf') format('truetype');
+    font-weight: normal;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Runda';
+    src: url('./fonts/Runda-BlackItalic.ttf') format('truetype');
+    font-weight: 900;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Runda';
+    src: url('./fonts/Runda-LightItalic.ttf') format('truetype');
+    font-weight: 300;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Runda';
+    src: url('./fonts/Runda-Light.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Runda';
+    src: url('./fonts/Runda-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}*/
+
+
