--- a/adaptis-master/src/views/index.pug
+++ b/adaptis-master/src/views/index.pug
@@ -4,7 +4,7 @@ block title
   title My Page - Index
 
 block content
-  - var pages = { homePage: '/homepage', testPage: '/test'  }
+  - var pages = { homePage: '/homepage', testPage: '/test', thework: '/the_work'  }
 
   //- Desktop page
   section.page.home__page
