--- a/adaptis-master/src/views/layouts/master.pug
+++ b/adaptis-master/src/views/layouts/master.pug
@@ -40,7 +40,9 @@ html(lang='jp')
     //- Fonts
     //- link(href="https://fonts.googleapis.com/css?family=Quicksand", rel='stylesheet')
 
-
+    link(href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
+    link(href='../../../asset/style/fonts/FonteAwesome/font-awesome.min.css')
+    
 
     //- Title
     block title
@@ -52,11 +54,13 @@ html(lang='jp')
 
     //- block content
     block content
-
+    include ../components/relative/relative.pug
+    //-include ../components/thework/thework.pug
     include ../components/footer/footer.pug
 
     //- block scripts
     block scripts
+    //- <script src="https://code.jquery.com/jquery-3.4.0.js"></script>
 
     script(id="ze-snippet", src="https://static.zdassets.com/ekr/snippet.js?key=a0d065e1-295a-4de9-89f4-106bb253506a" defer)
     script(src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDo8ICXyf-BwI1tBv-PJxvHgm-0wUbTLAY&libraries=places" defer)
