update header footer

--- a/adaptis-master/src/views/components/footer/footer.pug
+++ b/adaptis-master/src/views/components/footer/footer.pug
@@ -2,7 +2,7 @@ footer
     div.footer-general
         div.container
             div.logo 
-                    a(href="index.html") ADAPTIS
+                    a(href="homepage") ADAPTIS
             nav.footer-menu
                 ul
                     li.item#the_work_1
