--- a/adaptis-master/src/views/components/header/header.pug
+++ b/adaptis-master/src/views/components/header/header.pug
@@ -1,12 +1,12 @@
 header
     div.header-general#js-navbar-fixed
         div.logo
-            a(href="index.html") ADAPTIS
+            a(href="homepage") ADAPTIS
         div.main-menu
             nav
                 ul
                     li.menu-item.current
-                        a(href="index.html")  ADAPTIS
+                        a(href="homepage")  ADAPTIS
                     li.menu-item#the_work
                         a(href="the_work")  THE WORK
                     li.menu-item#the_agency
